--- a/build.gradle
+++ b/build.gradle
@@ -3,22 +3,30 @@ apply plugin: 'eclipse'
 apply plugin: 'application'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
-version = '0.1'
+version = '0.2'
 
 repositories {
 	mavenCentral()
 	maven {
+		// for HTTP Builder
 		url "http://repository.codehaus.org"
 		url "http://snapshots.repository.codehaus.org"
 	}
 }
 
 dependencies {
-	compile 'org.codehaus.groovy:groovy-all:2.3.3'
-	compile 'org.twitter4j:twitter4j-core:[4.0,)'
+	compile ('org.codehaus.groovy:groovy-all:2.3.3') {transitive = false}
+	compile ('org.twitter4j:twitter4j-core:[4.0,)') {transitive = false}
 //	compile 'org.codehaus.groovy.modules.http-builder:http-builder:[0.7,)'
 //	compile 'org.hibernate:hibernate-gradle-plugin:4.3.6.Final'
-	compile 'com.h2database:h2:1.4.180'
+	compile ('org.apache.logging.log4j:log4j-core:2.0.1') {transitive = false}
+	compile ('org.apache.logging.log4j:log4j-api:2.0.1') {transitive = false}
+	compile ('org.apache.logging.log4j:log4j-slf4j-impl:2.0.1') {transitive = false}
+	compile ('org.slf4j:slf4j-api:1.7.7') {transitive = false}
+	compile ('com.fasterxml.jackson.core:jackson-core:[2.4,)') {transitive = false}
+	compile ('com.fasterxml.jackson.core:jackson-databind:[2.4,)') {transitive = false}
+	compile ('com.fasterxml.jackson.core:jackson-annotations:[2.4,)') {transitive = false}
+	compile ('com.h2database:h2:1.4.180') {transitive = false}
 	testCompile 'org.spockframework:spock-maven:0.7-groovy-2.0'
 //	testCompile 'junit:junit:4.11'
 }
