--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,8 @@
+plugins {
+    id 'jacoco'
+    id 'com.github.kt3k.coveralls' version '2.8.1'
+}
+
 apply plugin: 'groovy'
 apply plugin: 'eclipse'
 //apply plugin: 'application'
@@ -14,16 +19,17 @@ dependencies {
 	compile ('org.twitter4j:twitter4j-core:[4.0,)') {transitive = false}
 	compile ('org.codehaus.groovy.modules.http-builder:http-builder:0.7.1') {transitive = false}
 //	compile 'org.hibernate:hibernate-gradle-plugin:4.3.6.Final'
-	compile ('org.apache.logging.log4j:log4j-core:2.0.1') {transitive = false}
-	compile ('org.apache.logging.log4j:log4j-api:2.0.1') {transitive = false}
-	compile ('org.apache.logging.log4j:log4j-slf4j-impl:2.0.1') {transitive = false}
-	compile ('org.slf4j:slf4j-api:1.7.7') {transitive = false}
+	compile ('org.apache.logging.log4j:log4j-core:2.8.1') {transitive = false}
+	compile ('org.apache.logging.log4j:log4j-api:2.8.1') {transitive = false}
+	compile ('org.apache.logging.log4j:log4j-slf4j-impl:2.8.1') {transitive = false}
+	compile ('org.slf4j:slf4j-api:1.7.24') {transitive = false}
 	compile ('com.fasterxml.jackson.core:jackson-core:[2.4,)') {transitive = false}
 	compile ('com.fasterxml.jackson.core:jackson-databind:[2.4,)') {transitive = false}
 	compile ('com.fasterxml.jackson.core:jackson-annotations:[2.4,)') {transitive = false}
 	compile ('com.h2database:h2:1.4.180') {transitive = false}
-	testCompile 'org.spockframework:spock-maven:0.7-groovy-2.0'
-//	testCompile 'junit:junit:4.11'
+
+	testImplementation 'org.spockframework:spock-core:1.0-groovy-2.4'
+//	testImplementation 'junit:junit:4.12'
 }
 
 def defaultEncoding = 'UTF-8'
@@ -93,3 +99,12 @@ jar {
 //}
 //
 //mainClassName = 'white.box.reins.Main'
+
+jacocoTestReport {
+	reports {
+		xml.enabled true // coveralls plugin depends on xml format report
+		html.enabled true
+		html.destination "${buildDir}/jacocoHtml"
+	}
+}
+jacocoTestReport.dependsOn test
